# oiff

./: .gitignore  CMakeLists.txt  README.md
R/: DESCRIPTION  NAMESPACE
R/R/: RcppExports.R  findOptimalThreshold.R
R/man/: findOptimalFilter.Rd
R/src/: Makevars  RcppExports.cpp  find_optimal.cpp
R/tests/: testthat.R
R/tests/testthat/: test-findOptimalFilter.R
docs/: Doxyfile  annotated.html  classes.html  dir_be7e9aec4d96c66fabea876036072534.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  namespaceoiff.html  namespaces.html  oiff_8hpp.html  oiff_8hpp__incl.map  oiff_8hpp__incl.md5  oiff_8hpp_source.html  structoiff_1_1OptimizeFilter-members.html  structoiff_1_1OptimizeFilter.html  structoiff_1_1OptimizeFilter_1_1Thresholds-members.html  structoiff_1_1OptimizeFilter_1_1Thresholds.html
docs/search/: all_1.js  all_2.js  all_3.js  all_5.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js
include/oiff/: oiff.hpp  quadtree.hpp  rank.hpp
tests/: CMakeLists.txt
tests/src/: oiff.cpp  quadtree.cpp  rank.cpp
